# DiffusionKurtosisFit

./: .gitattributes  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.md  README.txt  TODO.txt
Code/: CMakeLists.txt  DiffusionFilterCLI.cxx  DiffusionKurtosisFittingApp.cxx  DiffusionKurtosisFittingApp.h  DiffusionKurtosisFittingCLI.cxx  DiffusionScalarsCLI.cxx  DiffusionSimulateCLI.cxx  KurtosisScalarsCLI.cxx  Optimizer.cxx  Optimizer.h  ProgressMeter.cxx  ProgressMeter.h  Tensor.cxx  Tensor.h  Types.h  lookup.h  make_A_func.h  make_A_function.py  make_C_func.h  make_C_function.py  make_lookup.py
Documentation/: notes.txt  references.bib
Testing/: CMakeLists.txt  ProgressMeterTest.cxx  test_medium_dataset1.nrrd  test_medium_dataset2.nrrd  test_small_dataset1.nrrd  test_small_dataset2.nrrd
Utilities/: CMakeLists.txt
Utilities/vul/: CMakeLists.txt  README.txt  vul_arg.cxx  vul_arg.h
