cmake_minimum_required(VERSION 2.8)
cmake_policy(VERSION 2.8)

project(DKIFIT)

# version information (use snapshot for patch in between tagged releases)
SET(DKIFIT_VERSION_MAJOR "0")
SET(DKIFIT_VERSION_MINOR "1")
SET(DKIFIT_VERSION_PATCH "0")
SET(DKIFIT_VERSION "${DKIFIT_VERSION_MAJOR}.${DKIFIT_VERSION_MINOR}.${DKIFIT_VERSION_PATCH}")

# ITK 4.x required
FIND_PACKAGE(ITK)
INCLUDE(${ITK_USE_FILE})

SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin CACHE INTERNAL
"Single output directory for building all executables.")

INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/Utilities/vul
${CMAKE_SOURCE_DIR}/Code
)

ENABLE_TESTING()
INCLUDE(CTest)

SUBDIRS(Utilities Code Testing)

#-----------------------------------------------------------------
# setup packaging
INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Diffusion Kurtosis Fitting and Scalar Computation")
SET(CPACK_PACKAGE_VENDOR "Bioimaging Systems Lab, Virginia Tech")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
SET(CPACK_PACKAGE_VERSION_MAJOR ${DKIFIT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${DKIFIT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${DKIFIT_VERSION_PATCH})
SET(CPACK_GENERATOR ZIP)
SET(CPACK_COMPONENTS_ALL applications)
SET(CPACK_INSTALL_CMAKE_PROJECTS "${DKIFIT_BINARY_DIR};DKIFIT;ALL;/")
INCLUDE(CPack)
